[project]
name = "blabla"
version = "0.0.1"
dependencies = [
    "asn1tools",
    "click",
    "cryptography",
    "fastapi>=0.103",
    "hypercorn",
    "isodate",
    "Jinja2",
    "networkx",
    "opentelemetry-instrumentation-fastapi",
    "ptpython",
    "pydantic-extra-types",
    "pydantic[email]>=2.0",
    "python-multipart",  # need by fastAPI to deal with file
    "python-statemachine",
    "qrcode",
    "remoulade[pydantic]>=3.0.0",
    "requests>=2.31.0",
    "sqlalchemy~=2.0",
    "unidecode",
    "xhtml2pdf",
    "reportlab==3.6.13",
    "pypdf>3.16.4"  # CVE-2023-46250
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black",
    "colorama",
    "devtools[pygments]",
    "factory-boy",
    "freezegun",
    "notion-client",
    "pdfminer.six",
    "pip-tools==7.3.0",
    "pre-commit",
    "ptpython",
    "pyright==1.1.345",
    "pytest==7.4.4",
    "python-dotenv",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-xdist==3.5.0",
    "pyupgrade",
    "ruff",
]
test = [
    "colorama",
    "factory-boy",
    "freezegun",
    "notion-client",
    "pdfminer.six",
    "pip-tools==7.3.0",
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-xdist==3.5.0"
]
lint = [
    "black",
    "colorama",
    "factory-boy",
    "freezegun",
    "lxml-stubs==0.4.0",
    "notion-client",
    "pdfminer.six",
    "ptpython",
    "pyright==1.1.345",
    "pytest==7.4.4",
    "pytest-mock==3.12.0",
    "python-dotenv",
    "ruff",
    "types-chardet==4.0.4",
    "types-python-dateutil==2.8.19.20240106",
    "types-pytz==2021.3.8",
    "types-redis==4.6.0.20240106",
    "types-requests==2.31.0.20240106",
    "types-simplejson==3.19.0.2",
    "types-urllib3==1.26.25.14",
    "behave"
]
